# reciprocity

./: .gitignore  README.md  controleval.py  pyproject.toml
bloom-data/: behaviors.json  models.json  seed.yaml
bloom-data/behaviors/examples/: transcript_2026-01-07_13-39-12_1.json  transcript_2026-01-07_16-12-22_1.json
bloom-data/configurable_prompts/: default.json
petri-exploration/: evals.py  gaslighted_guilt_eval.py
ukaisi/: evals.py  gaslighted_guilt_eval.py  gaslighted_guilt_prompts.py  graphs.py  prompts.py
understand/: eval.py  profiles.py  task_prompt.py  visualizations.py
