[project]
name = "ukaisi"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "petri",
    "matplotlib",
    "scipy",
    "control-arena>=13.5.0",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ukaisi", "understand"]

[tool.uv.sources]
petri = { git = "https://github.com/safety-research/petri" }

